// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Code component Aligned 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: right;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;

exports[`A Code component resized 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 2.875rem;
  line-height: 4rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
  size="d2"
>
  Hello
</code>
`;

exports[`A Code component transformed 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: uppercase;
  text-align: left;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;

exports[`A Code component with variant 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #CC1F36;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;

exports[`A Codet component weight 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 700;
  text-transform: none;
  text-align: left;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;

exports[`A Text component tuncated 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;

exports[`A default Code component 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;
